--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
    <meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,minimal-ui" />
-    <title>禹锡智慧</title>
+    <title></title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">美食</div>
     <!-- built files will be auto injected -->
   </body>
 </html>
